--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Kevin Sturm
 description              : Kevin STurm - Projects and CV 
-baseurl                  : "" # Set this to your repo name 
+/fa25-portfolio-kevin-sturm/                 : "" # Set this to your repo name 
 
 # Theme and Style
 theme: jekyll-theme-minimal
