--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description              : Kevin Sturm - Projects and CV
 
 # Theme and Style
 theme: jekyll-theme-minimal
-color_scheme: dark # light/default, dark, or aqua
+color_scheme: aqua # light/default, dark, or aqua
 
 sass:
   style: compressed
